Z-index fixes

--- a/src/assets/components/_buttons.scss
+++ b/src/assets/components/_buttons.scss
@@ -29,6 +29,7 @@
 
 .fixed-action-btn {
   right: 53px;
+  z-index: 10;
 
   .btn-floating.btn-large.blue {
     border-radius: 14px;
