--- a/src/assets/layout/_sidebar.scss
+++ b/src/assets/layout/_sidebar.scss
@@ -7,7 +7,7 @@
   transition: transform 0.3s, -webkit-transform 0.3s;
   bottom: 0 !important;
   height: auto !important;
-  z-index: 998;
+  z-index: 11;
 
   @media (max-width: $small-tablet) {
     width: 100%;
